fix : fix room tile z-index bug

--- a/src/components/browser/Header/style.css
+++ b/src/components/browser/Header/style.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 2;
+    z-index: 3;
 }
 
 /*title styling*/
