--- a/src/components/browser/RoomTile/style.css
+++ b/src/components/browser/RoomTile/style.css
@@ -5,5 +5,5 @@
     height: 26.3rem;
     border-radius: 1rem;
 
-    z-index: 1;
+    /*z-index: 1;*/
 }
